2015-04-01  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* gcc.dg/pr23623.c: Added aligned attribute.
	* gcc.dg/20141029-1.c: Likewise.
	* gcc.dg/20150306-1.c: New test.

2015-04-01  Marek Polacek  <polacek@redhat.com>

	PR c++/65554
	* g++.dg/cpp0x/initlist93.C: New test.
	* g++.dg/cpp0x/initlist94.C: New test.

2015-04-01  Max Ostapenko  <m.ostapenko@partner.samsung.com>

	PR target/65624
	* gcc.target/aarch64/pr65624.c: New test.

2015-03-31  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/ipa/inlinehint-4.c: New testcase.

2015-03-31  Alex Velenko  <Alex.Velenko@arm.com>

	* gcc.target/arm/pr45701-1.c (history_expand_line_internal): Add an
	extra variable to force stack alignment.
	* gcc.target/arm/pr45701-2.c (history_expand_line_internal): Add an
	extra variable to force stack alignment.

2015-03-31  Marek Polacek  <polacek@redhat.com>

	PR c++/65390
	* g++.dg/template/pr65390.C: New test.

2015-03-31  Martin Liska  <mliska@suse.cz>

	* g++.dg/ipa/pr65557.C: New test.

2015-03-31  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/hotpatch-25.c: New test.
	* gcc.target/s390/hotpatch-1.c: Update test.
	* gcc.target/s390/hotpatch-10.c: Update test.
	* gcc.target/s390/hotpatch-11.c: Update test.
	* gcc.target/s390/hotpatch-12.c: Update test.
	* gcc.target/s390/hotpatch-13.c: Update test.
	* gcc.target/s390/hotpatch-14.c: Update test.
	* gcc.target/s390/hotpatch-15.c: Update test.
	* gcc.target/s390/hotpatch-16.c: Update test.
	* gcc.target/s390/hotpatch-17.c: Update test.
	* gcc.target/s390/hotpatch-18.c: Update test.
	* gcc.target/s390/hotpatch-19.c: Update test.
	* gcc.target/s390/hotpatch-2.c: Update test.
	* gcc.target/s390/hotpatch-21.c: Update test.
	* gcc.target/s390/hotpatch-22.c: Update test.
	* gcc.target/s390/hotpatch-23.c: Update test.
	* gcc.target/s390/hotpatch-24.c: Update test.
	* gcc.target/s390/hotpatch-3.c: Update test.
	* gcc.target/s390/hotpatch-4.c: Update test.
	* gcc.target/s390/hotpatch-5.c: Update test.