@@ -1,3 +1,11 @@
+2015-04-01  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/56100
+	* g++.dg/warn/Wshadow-8.C: New.
+	* g++.dg/warn/Wshadow-9.C: Likewise.
+	* g++.dg/warn/Wshadow-10.C: Likewise.
+	* g++.dg/warn/Wshadow-11.C: Likewise.
+
 2015-04-01  Bernd Edlinger  <bernd.edlinger@hotmail.de>
 
 	* gcc.dg/pr23623.c: Added aligned attribute.
